syntax = "proto3";
package pryzmatics.oracle;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/types/oracle";

message PreVote {
  uint64 id = 1;
  string feeder = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int64 block_height = 4;
  google.protobuf.Timestamp block_time = 5 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string vote_interval_close_block_height = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
}